--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Fresh Squeeze</title>
+    <link rel="stylesheet" href="resources/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,500i,600i,700&display=swap" rel="stylesheet">
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -11,6 +13,8 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
+    <h1>Test</h1>
+
 
   </body>
 </html>
