--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Fresh Squeeze</title>
     <link rel="stylesheet" href="resources/normalize.css">
+    <link rel="stylesheet" href="resources/Grid.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,500i,600i,700&display=swap" rel="stylesheet">
     <script
@@ -13,8 +14,13 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Test</h1>
-
+    <header>
+      <div class="header-text-box">
+        <h1>Searching for a recipe? Look no further.</h1>
+        <a href="#">Recipe Search</a>
+        <a href="#">Have an allergy?</a>
+      </div>
+    </header>
 
   </body>
 </html>
