--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Fresh Squeeze</title>
-    <link rel="stylesheet" href="resources/normalize.css">
-    <link rel="stylesheet" href="resources/Grid.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/normalize.css">
+    <link rel="stylesheet" type="text/css" href="resources/grid.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,500i,600i,700&display=swap" rel="stylesheet">
+    <title>Fresh Squeeze</title>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
