created buttons with hover effect

--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -16,9 +16,9 @@
   <body>
     <header>
       <div class="header-text-box">
-        <h1>Searching for a recipe? Look no further.</h1>
-        <a href="#">Recipe Search</a>
-        <a href="#">Have an allergy?</a>
+        <h1>Searching for a recipe?<br>Look no further.</h1>
+        <a href="#" class="btn btn-filled">Recipe Search</a>
+        <a href="#" class="btn btn-hollow">Have an allergy?</a>
       </div>
     </header>
 
