--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -21,6 +21,22 @@
         <a href="#" class="btn btn-hollow">Have an allergy?</a>
       </div>
     </header>
+    <section class="section-text-box">
+      <div class="row">
+        <h2>This is how it works.</h2>
+        <p>Fresh Squeeze is a search service utilizing the keywords you enter to find recipes and relevant dietary information about the what you're looking for.</p>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <h3>Food Item Search</h3>
+          <p>Just include the key word or phrase that you are looking for and start searching.<br>Examples: Cheese, No Cheese, Cheese and Meat</p>
+        </div>
+        <div class="col span-1-of-2">
+          <h3>Dietery Restrictions</h3>
+          <p>We make an effort to make sure our program is inclusive by allowing you to filter data by any of the registered food allergies.</p>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
