--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -41,17 +41,17 @@
       <hr>
       <div class="row">
         <div class="col span-1-of-3 field">
-          <ion-icon name="search-outline"></ion-icon>
+          <ion-icon class="icon-size" name="search-outline"></ion-icon>
           <h3>Food Item Search</h3>
           <p>Just include the key word or phrase that you are looking for and start searching.<br>Examples: Cheese, No Cheese, Cheese and Meat</p>
         </div>
         <div class="col span-1-of-3 field">
-          <ion-icon name="sad-outline"></ion-icon>
+          <ion-icon class="icon-size" name="sad-outline"></ion-icon>
           <h3>Dietery Restrictions</h3>
           <p>We make an effort to make sure our program is inclusive by allowing you to filter data by any of the registered food allergies.</p>
         </div>
         <div class="col span-1-of-3 field">
-          <ion-icon name="calculator-outline"></ion-icon>
+          <ion-icon class="icon-size" name="calculator-outline"></ion-icon>
           <h3>Cost out your Recipe</h3>
           <p>The ability to get an idea of how much your groceries are going to cost before even leaving the house lends itself to far more responsible shopping.</p>
         </div>
