--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -11,6 +11,7 @@
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
+      <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
@@ -57,7 +58,22 @@
         </div>
       </div>
     </section>
-
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <section class="section-tabs">
+      <div class="row">
+        <h2>Let's give it a try.</h2>
+      </div>
+      <div class="row">
+        <div class="col span-3-of-3">
+          <ul class="tab-list">
+            <li class="active"><a class="tab-control" href="#tab-1">Search</a></li>
+            <li><a class="tab-control" href="#tab-2">Ingredients</a></li>
+            <li><a class="tab-control" href="#tab-3">Cost</a></li>
+          </ul>
+          <div class="tab-panel active" id="tab-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+          <div class="tab-panel" id="tab-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+          <div class="tab-panel" id="tab-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
