--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -60,7 +60,7 @@
     </section>
     <section class="section-tabs">
       <div class="row">
-        <h2>Let's give it a try.</h2>
+        <h2>Let's see what's for dinner.</h2>
       </div>
       <div class="row">
         <div class="col span-3-of-3">
@@ -69,7 +69,23 @@
             <li><a class="tab-control" href="#tab-2">Ingredients</a></li>
             <li><a class="tab-control" href="#tab-3">Cost</a></li>
           </ul>
-          <div class="tab-panel active" id="tab-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+          <div class="tab-panel active" id="tab-1">
+            <div class="row">
+              <div class="col span-1-of-2">
+                <label for="">Include and food you want:</label>
+              </div>
+              <div class="col span-1-of-2">
+                <input class="search-box" type="text" name="search" placeholder="Apple, Cheese, etc.">
+              </div>
+            </div>
+            <div id="card-holder" class="row">
+              <div id="recipe-card" class="col span-3-of-3">
+                  <h2 class="food-search">Recipe Name</h2>
+                  <hr>
+                  <p class="food-description">This is where your recipe info will be.</p>
+              </div>
+            </div>
+          </div>
           <div class="tab-panel" id="tab-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
           <div class="tab-panel" id="tab-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
         </div>
