--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -72,10 +72,12 @@
           <div class="tab-panel active" id="tab-1">
             <div class="row">
               <div class="col span-1-of-2">
-                <label for="">Include and food you want:</label>
+                <label for="">Include food you want:</label>
               </div>
               <div class="col span-1-of-2">
-                <input class="search-box" type="text" name="search" placeholder="Apple, Cheese, etc.">
+                <form class="search" action="index.html" method="post">
+                  <input class="search-box" type="text" name="search" placeholder="Apple, Cheese, etc.">
+                </form>
               </div>
             </div>
             <div id="card-holder" class="row">
