created DOM element using ajax request on first tab panel

--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -82,9 +82,9 @@
             </div>
             <div id="card-holder" class="row">
               <div id="recipe-card" class="col span-3-of-3">
-                  <h2 class="food-search">Recipe Name</h2>
+                  <h2 class="food-search">Recipes</h2>
                   <hr>
-                  <p class="food-description">This is where your recipe info will be.</p>
+                  <ul class="food-description"></ul>
               </div>
             </div>
           </div>
