--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -82,14 +82,50 @@
             </div>
             <div id="card-holder" class="row">
               <div id="recipe-card" class="col span-3-of-3">
-                  <h2 class="food-search">Recipes</h2>
+                  <h2 class="food-search">Top 10 Recipes</h2>
                   <hr>
                   <ul class="food-description"></ul>
               </div>
             </div>
           </div>
-          <div class="tab-panel" id="tab-2"> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-          <div class="tab-panel" id="tab-3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
+          <div class="tab-panel" id="tab-2">
+            <div class="row">
+              <div class="col span-1-of-2">
+                <label for="">Include food you want:</label>
+              </div>
+              <div class="col span-1-of-2">
+                <form class="search" action="index.html" method="post">
+                  <input class="search-box" type="text" name="search" placeholder="Apple, Cheese, etc.">
+                </form>
+              </div>
+            </div>
+            <div id="card-holder" class="row">
+              <div id="recipe-card" class="col span-3-of-3">
+                  <h2 class="food-search">Ingredients</h2>
+                  <hr>
+                  <ul class="ingredient-description"></ul>
+              </div>
+            </div>
+          </div>
+          <div class="tab-panel" id="tab-3">
+            <div class="row">
+              <div class="col span-1-of-2">
+                <label for="">Include food you want:</label>
+              </div>
+              <div class="col span-1-of-2">
+                <form class="search" action="index.html" method="post">
+                  <input class="search-box" type="text" name="search" placeholder="Apple, Cheese, etc.">
+                </form>
+              </div>
+            </div>
+            <div id="card-holder" class="row">
+              <div id="recipe-card" class="col span-3-of-3">
+                  <h2 class="food-search">Cost</h2>
+                  <hr>
+                  <ul class="cost-description"></ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
