created format function

--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -20,8 +20,8 @@
         <div class="row">
           <h3>Fresh Squeeze</h3>
           <ul class="header-nav">
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Food Search</a></li>
+            <li><a href="#explain">How it works</a></li>
+            <li><a href="#search">Food Search</a></li>
             <li><a href="#">Grocery Estimator</a></li>
           </ul>
         </div>
@@ -29,12 +29,12 @@
       <div class="header-text-box">
         <h1>Searching for a recipe?<br>Look no further.</h1>
         <div class="btns">
-          <a href="#" class="btn btn-filled">Recipe Search</a>
+          <a href="#search" class="btn btn-filled">Recipe Search</a>
           <a href="#" class="btn btn-hollow">Have an allergy?</a>
         </div>
       </div>
     </header>
-    <section class="section-text-box">
+    <section class="section-text-box" id="explain">
       <div class="row">
         <h2>This is how it works.</h2>
         <p class="hook">Fresh Squeeze is a search service utilizing the keywords you enter to find recipes and relevant diet information about  what you are looking for.</p>
@@ -58,7 +58,7 @@
         </div>
       </div>
     </section>
-    <section class="section-tabs">
+    <section class="section-tabs" id="search">
       <div class="row">
         <h2>Let's see what's for dinner.</h2>
       </div>
@@ -101,7 +101,7 @@
             </div>
             <div id="card-holder" class="row">
               <div id="recipe-card" class="col span-3-of-3">
-                  <h2 class="food-search">Ingredients</h2>
+                  <h2 class="food-search">Here's what you'll need</h2>
                   <hr>
                   <ul class="ingredient-description"></ul>
               </div>
