added small footer

--- a/spoonacular_app/index.html
+++ b/spoonacular_app/index.html
@@ -129,5 +129,16 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div id="footer-container" class="row">
+        <div class="col span-3-of-3">
+          <div class="social-list">
+            <ion-icon name="logo-linkedin"></ion-icon>
+            <ion-icon name="logo-slack"></ion-icon>
+            <ion-icon name="logo-github"></ion-icon>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
