--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="resources/Grid.css">
     <link rel="stylesheet" type="text/css" href="resources/normalize.css">
-    <link rel="stylesheet" type="text/css" href="resources/grid.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500,500i,600i,700&display=swap" rel="stylesheet">
     <title>Fresh Squeeze</title>
